--- a/DESKTOPV2/configuracoes.html
+++ b/DESKTOPV2/configuracoes.html
@@ -566,6 +566,23 @@
                                 </label>
                             </label>
 
+                            <!-- NFe -->
+                            <label class="payment-method-card" for="paymentNfe" :class="{ 'active': preferencias.paymentMethods.NFE }">
+                                <div class="payment-method-info">
+                                    <div class="payment-icon" style="background: linear-gradient(135deg, rgba(139, 92, 246, 0.2) 0%, rgba(139, 92, 246, 0.1) 100%);">
+                                        <i class="fas fa-file-invoice" style="color: #8b5cf6;"></i>
+                                    </div>
+                                    <div>
+                                        <div class="form-label" style="margin-bottom: 4px;">Nota Fiscal Eletrônica</div>
+                                        <span class="text-sm text-secondary">Pagamento via NFe</span>
+                                    </div>
+                                </div>
+                                <label class="switch" @click.stop>
+                                    <input type="checkbox" id="paymentNfe" x-model="preferencias.paymentMethods.NFE">
+                                    <span class="slider round"></span>
+                                </label>
+                            </label>
+
                             <!-- Débito de Funcionário -->
                             <label class="payment-method-card" for="paymentDebitoFuncionario" :class="{ 'active': preferencias.paymentMethods.DEBITO_FUNCIONARIO }">
                                 <div class="payment-method-info">
@@ -1225,6 +1242,7 @@
                         DINHEIRO: true,
                         PIX: true,
                         CARTAO: true,
+                        NFE: true,
                         DEBITO_FUNCIONARIO: false
                     },
                     notifications: {
@@ -1448,6 +1466,7 @@
                             DINHEIRO: paymentConfig.DINHEIRO !== false,
                             PIX: paymentConfig.PIX !== false,
                             CARTAO: paymentConfig.CARTAO !== false,
+                            NFE: paymentConfig.NFE !== false,
                             DEBITO_FUNCIONARIO: paymentConfig.DEBITO_FUNCIONARIO === true
                         };
 
