--- a/DESKTOPV2/financeiro.html
+++ b/DESKTOPV2/financeiro.html
@@ -1240,6 +1240,7 @@
                                 <option value="DINHEIRO">Dinheiro</option>
                                 <option value="PIX">PIX</option>
                                 <option value="CARTAO">Cartao</option>
+                                <option value="NFE">NFe</option>
                             </select>
                         </div>
                     </div>
