--- a/DESKTOPV2/funcionario/financeiro-funcionario.html
+++ b/DESKTOPV2/funcionario/financeiro-funcionario.html
@@ -971,6 +971,7 @@
             <option value="DINHEIRO">Dinheiro</option>
             <option value="CARTAO">Cartão</option>
             <option value="PIX">Pix</option>
+            <option value="NFE">NFe</option>
             <option value="CHEQUE">Cheque</option>
           </select>
         </div>
