--- a/DESKTOPV2/funcionario/ordens-funcionario.html
+++ b/DESKTOPV2/funcionario/ordens-funcionario.html
@@ -1117,6 +1117,10 @@
           <i class="fas fa-credit-card"></i>
           <span>Cartão</span>
         </button>
+        <button type="button" class="payment-method-btn" onclick="addPayment('NFE')" title="Nota Fiscal Eletrônica">
+          <i class="fas fa-file-invoice"></i>
+          <span>NFe</span>
+        </button>
         <button type="button" class="payment-method-btn pending" onclick="addPayment('PENDENTE')" title="Pendente">
           <i class="fas fa-clock"></i>
           <span>Pendente</span>
