--- a/DESKTOPV2/historico.html
+++ b/DESKTOPV2/historico.html
@@ -408,6 +408,11 @@
             color: #92400e;
         }
 
+        .payment-badge-small.nfe {
+            background: #ede9fe;
+            color: #5b21b6;
+        }
+
         .timeline-order-footer {
             display: flex;
             justify-content: space-between;
@@ -702,6 +707,7 @@
                         <option value="DINHEIRO">Dinheiro</option>
                         <option value="PIX">PIX</option>
                         <option value="CARTAO">Cartão</option>
+                        <option value="NFE">NFe</option>
                         <option value="PENDENTE">Pendente</option>
                     </select>
                 </div>
@@ -953,6 +959,7 @@ function createCompactCard(order) {
                 case 'DINHEIRO': return 'Dinheiro';
                 case 'CARTAO': return 'Cartão';
                 case 'PIX': return 'PIX';
+                case 'NFE': return 'NFe';
                 case 'PENDENTE': return 'Pendente';
                 case 'DEBITO_FUNCIONARIO': return 'Débito Func.';
                 default: return m;
