--- a/DESKTOPV2/ordens.html
+++ b/DESKTOPV2/ordens.html
@@ -918,6 +918,9 @@
                     <button class="payment-method-btn" @click="addPayment('CARTAO')" x-show="paymentMethodsConfig.CARTAO">
                         <i class="fas fa-credit-card"></i> Cartao
                     </button>
+                    <button class="payment-method-btn" @click="addPayment('NFE')" x-show="paymentMethodsConfig.NFE">
+                        <i class="fas fa-file-invoice"></i> NFe
+                    </button>
                     <button class="payment-method-btn" @click="addPayment('DEBITO_FUNCIONARIO')" x-show="paymentMethodsConfig.DEBITO_FUNCIONARIO">
                         <i class="fas fa-user-tag"></i> Debito Funcionario
                     </button>
@@ -1036,6 +1039,7 @@
                     DINHEIRO: true,
                     PIX: true,
                     CARTAO: true,
+                    NFE: true,
                     DEBITO_FUNCIONARIO: false
                 },
                 paymentKeydownHandler: null,
