--- a/DESKTOPV2/historico.html
+++ b/DESKTOPV2/historico.html
@@ -1266,8 +1266,11 @@ async function payPending(orderId) {
                     <button onclick="processPayPending('${orderId}', '${pagamentoPendente.id}', 'PIX')" class="btn btn-primary" style="padding: 14px; font-size: 14px;">
                         <i class="fab fa-pix"></i> PIX
                     </button>
-                    <button onclick="processPayPending('${orderId}', '${pagamentoPendente.id}', 'CARTAO')" class="btn btn-primary" style="padding: 14px; font-size: 14px; grid-column: 1/-1;">
+                    <button onclick="processPayPending('${orderId}', '${pagamentoPendente.id}', 'CARTAO')" class="btn btn-primary" style="padding: 14px; font-size: 14px;">
                         <i class="fas fa-credit-card"></i> Cartão
+                    </button>
+                    <button onclick="processPayPending('${orderId}', '${pagamentoPendente.id}', 'NFE')" class="btn btn-primary" style="padding: 14px; font-size: 14px;">
+                        <i class="fas fa-file-invoice"></i> NFe
                     </button>
                 </div>
             </div>
